Wallet window fixes